--- a/home/cart.css
+++ b/home/cart.css
@@ -117,3 +117,33 @@ a:hover{
     background-color: rgb(245, 244, 243);
 }
 
+
+
+
+/* pagnation */
+.pagination {
+    display: inline-block;
+    /* border: 1px solid blue; */
+  }
+  
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+  }
+  
+  .pagination a:hover:not(.active) {
+    background-color: #ddd;
+    border-radius: 5px;
+  }
+  #ghj{
+    width: 25%;
+ margin: auto;
+  }
