--- a/home/home.css
+++ b/home/home.css
@@ -59,22 +59,63 @@ a:hover{
     justify-content:center;
 }
 
+
+
+
 /* Navigation Bar */
 
-#nav{
+.dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    padding: 12px 16px;
+    z-index: 1;
+  }
+  
+  .dropdown:hover .dropdown-content {
+    display: block;
+  }
+ #women_dropdown{
+    font-weight: 600;
+ }
+ #po{
+    font-size: 17px;
+    font-weight: 600;
+ }
+ .dropdown{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 13px;
+    /* border: 1px solid red; */
+    padding-top: 25px;
+ }
+
+
+ #nav{
+    display: grid;
+    grid-template-columns: repeat(2,1fr);
+
+ }
+ .dropdown span{
+    font-size: 23px;
+ }
+ #nav1{
     display: flex;
-}
-#nav>div:nth-child(2){
+    justify-content: space-evenly;
+ }
+ #nav2{
     display: grid;
     grid-template-columns: repeat(3,1fr);
-}
-#nav>div:nth-child(1){
-    display: grid;
-    grid-template-columns: repeat(10,1fr);
-    width: 60%;
-}
-
-
+    justify-content: space-evenly;
+    /* border: 1px solid black; */
+    width: 80%;
+ }
 
 
 
@@ -89,7 +130,7 @@ a:hover{
     font-size: 32px;
 }
 .border{
-    border: 1px solid black;
+    /* border: 1px solid black; */
     padding: 10px 23px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 15px;
@@ -199,6 +240,9 @@ a:hover{
 #you_also_love img{
     width: 100%;
 }
+#you_also_love>a:hover div{
+    padding: 10px;
+}
 
 
 
@@ -211,6 +255,7 @@ a:hover{
     grid-template-columns: repeat(4,1fr);
     gap: 60px;
     grid-auto-rows: 300px;
+    padding: 20px;
 }
 #slide_show img{
     width: 100%;
@@ -246,16 +291,36 @@ a:hover{
 #background_image{
     background-image:url('https://www.jcrew.com/brand_creative/homepage2022/15-Dec4/2022dec2_1213_hp_w_img0.jpg');
     width: 100%;
-    height: 800px;
+    height: 650px;
+    line-height: 0cm;
+}
+
+#background_image>div{
+   width: 80%;
+   margin: auto;
+   display: grid;
+   grid-template-columns: repeat(5,1fr);
+   gap: 20px;
+   padding-top: 10px;
+}
+#background_image>div>button{
+    height: 50px;
+    width: 170px;
+    background-color: white;
+    border: none;
+    font-size: 15px;
+    font-weight: 600;
+
+}
+#background_image>div>a:hover{
+    cursor: pointer;
 }
 #background_image p{
     text-align: center;
-    font-size: 60px;
+    font-size: 80px;
+    /* color: white; */
 }
-#background_image img{
-    width: 100%;
-    
-}
+
 
 
 
