--- a/home/shopping.css
+++ b/home/shopping.css
@@ -31,6 +31,7 @@
     height: 40px;
     font-size: 16px;
 }
+
 #filter{
     width: 320px;
     height: 40px;
@@ -140,7 +141,6 @@ font-size: 13px;
 
 
 
-
 /* footer */
 #footer1,#footer2{
     display: flex;
@@ -219,3 +219,34 @@ a:hover{
 #last_image_div img{
     width: 100%;
 }
+
+
+
+
+/* pagnation */
+.pagination {
+    display: inline-block;
+    /* border: 1px solid blue; */
+  }
+  
+  .pagination a {
+    color: black;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+  }
+  
+  .pagination a.active {
+    background-color: #4CAF50;
+    color: white;
+    border-radius: 5px;
+  }
+  
+  .pagination a:hover:not(.active) {
+    background-color: #ddd;
+    border-radius: 5px;
+  }
+  #ghj{
+    width: 25%;
+ margin: auto;
+  }
